--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
